chore: making footer fixed height, changing spacing

--- a/src/components/FixedBottomNavBar/style.module.scss
+++ b/src/components/FixedBottomNavBar/style.module.scss
@@ -3,7 +3,7 @@
   position: fixed;
   bottom: 0;
   width: calc(100vw - 240px);
-  height: 10vh;
+  height: 80px;
   justify-content: space-around;
   background-color: white;
   border-top: 1px solid rgba(0, 0, 0, 0.12);
